# ia-07-embeddings-service

./: README.md  TASK.md  pyproject.toml
src/ia07_embeddings_service/: __init__.py  app.py
src/ia_core/: __init__.py  embeddings.py
tests/: test_service.py
